slight reformat, corrects code style